--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+    <h1>CatPhotoApp</h1>
+    <p> Click here to see <a href="https://www.pexels.com/search/cat/">more cat photos</a>
+        <img src="cat.jpg" alt="Cat Photo">
+        
     
 </body>
 </html>
