--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>CatPhotoApp</h1>
     <p> Click here to see <a href="https://www.pexels.com/search/cat/">more cat photos</a>
-        <img src="cat.jpg" alt="Cat Photo">
+        <a href="#"><img src="cat.jpg" alt="Cat Photo"></a>
         
     
 </body>
