added new img border

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet'>
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
     <h1>CatPhotoApp</h1>
-    <p> Click here to see <a href="https://www.pexels.com/search/cat/">more cat photos</a>
-        <a href="#"><img src="cat.jpg" alt="Cat Photo"></a>
+    <p> Click here to see <a href="https://www.pexels.com/search/cat/">more cat photos</a></p>
+
+    <img src="cat.jpg" alt="Cat Photo">
         
     
 </body>
