added new feature

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>CatPhotoApp</h1>
-    <p> Click here to see <a href="https://www.pexels.com/search/cat/">more cat photos</a></p>
-
-    <img src="cat.jpg" alt="Cat Photo">
-        
+    <div>
+        <h1>CatPhotoApp</h1>
+        <p> Click here to see <a href="https://www.pexels.com/search/cat/">more cat photos</a></p>
+        <img src="cat.jpg" alt="Cat Photo">
+    </div>
     
 </body>
 </html>
